--- a/RestCode_WebApplication/appsettings.json
+++ b/RestCode_WebApplication/appsettings.json
@@ -1,13 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=restcode_webapplication;uid=root;password="
+    "MySQLConnection": "server=localhost;port=3306;database=restcode-db; user id=root;password=password"
   },
   "AllowedHosts": "*"
 }
